--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-ww 
-11
-33
-44
-ss
-99
-'sun'
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,user-scalable=no,initial-scale=1,viewport-fit=cover"
+    />
+    <meta name="theme-color" content="transparent" />
+    <title></title>
+  </head>
+  <body>
+    <div id="app">111</div>
+  </body>
+</html>
